added bill search function, works similar to committee search

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 html, body {
-	background-color: #FCFCFF
+	background-color: #FCFCFF;
 }
 
 .result {
 	cursor: pointer;
+}
+
+.jumbotron {
+	background-color: #E5E5FF;
 }
